deployment/resources/install.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubesci-deployment
  labels:
    app: kubesci-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubesci-controller
  template:
    metadata:
      labels:
        app: kubesci-controller
    spec:
      serviceAccount: kubesci
      serviceAccountName: kubesci
      containers:
      - name: kubesci-controller
        image: jordanph/kubesci:0.1.1
        ports:
        - containerPort: 3030
---
apiVersion: v1
kind: Service
metadata:
  name: kubesci-controller
spec:
  selector:
    app: kubesci-controller
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3030
